--- a/TennisDay30Tests/TennisDay30Tests.csproj
+++ b/TennisDay30Tests/TennisDay30Tests.csproj
@@ -59,6 +59,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TennisDay30\TennisDay30.csproj">
+      <Project>{B1B667F2-4077-4C35-835E-FFAC1F1F73F2}</Project>
+      <Name>TennisDay30</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
